# wca-regulations-compiler

./: .gitignore  Dockerfile  MANIFEST.in  README.md  build-with-docker.sh  pyproject.toml  setup.py  wca-regulations-merged.md  wca-regulations.md  wcac.py  wcalexer.py  wcaparser.py  wrc-test.py
codegen/: html.py  latex.py
parse/: lexer.py  parser.py
sema/: ast.py  check.py
wrc/: wrc.py
wrc/codegen/: cg.py  cghtml.py  cghtmltopdf.py  cgjson.py  cglatex.py  cgsql.py  combiner.py  exceptions.py  html.py  latex.py  merger.py
wrc/data/: footer.css  footer.html  header.html  htmltopdf.css  languages.json
wrc/parse/: lexer.py  parser.py
wrc/sema/: ast.py  check.py
